--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,9 +37,26 @@ jobs:
         with:
            name: rust
            path: dist/*
-    
-
-
+  
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: [ get-version, build ]
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: rust
+          path: dist/
+      - name: Create Github Release
+        env:
+          VERSION: "${{ needs.get-version.outputs.version }}"
+          REPO: "${{ github.repository }}"
+          COMMIT: "${{ github.sha }}"
+          GH_TOKEN: "${{ github.token }}"
+        run:
+          gh release create --repo $REPO --target $COMMIT $VERSION dist/*
+          
 
           
         
