--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,8 @@ jobs:
         with:
           name: rust
           path: dist/
+      - name: Zip files artifacts
+        run: zip -r artifacts.zip dist/*
       - name: Create Github Release
         env:
           VERSION: "${{ needs.get-version.outputs.version }}"
