--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 on:
   push:
 
+    branches:
+      - main
+      - beta
+
 permissions:
   contents: write
  
@@ -9,6 +13,7 @@ jobs:
     uses: shiipou/github-actions/.github/workflows/get-version.yml@main
     with:
       release-branches: '^(main)$'
+      prerelease-branches: "^(beta)$"
 
   build:
    name: rust build
@@ -43,7 +48,10 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     needs: [ get-version, build ]
+    if: ${{ needs.get-version.outputs.will-release }}
+        
     steps:
+    
       - name: Download artifacts
         uses: actions/download-artifact@v4.1.8
         with:
@@ -59,7 +67,7 @@ jobs:
           GH_TOKEN: "${{ github.token }}"
         run:
           gh release create --repo $REPO --target $COMMIT $VERSION artifacts.zip
-          
+        
 
           
         
