--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,13 +64,13 @@ jobs:
             COMMIT: "${{ github.sha }}"
             GH_TOKEN: "${{ github.token }}"
             PRERELEASE: ${{ needs.get-version.outputs.is-prerelease }}
-            CHANGELOG: "${{ needs.get-version.outputs.changelogs }}"
+            CHANGELOG: ${{ needs.get-version.outputs.changelogs }}
           run: |
-            echo "${{ needs.get-version.outputs.changelogs }}" > changelog.md
+            echo "$CHANGELOG" > changelog.md
             if [ "$PRERELEASE" == "true" ]; then
-            gh release create --prerelease --repo $REPO --target $COMMIT -F $CHANGELOG "v$VERSION" artifacts.zip
+              gh release create --prerelease --repo $REPO --target $COMMIT -F changelog.md "v$VERSION" artifacts.zip
             else
-            gh release create --repo $REPO --target $COMMIT -F $CHANGELOG "v$VERSION" artifacts.zip
+              gh release create --repo $REPO --target $COMMIT -F changelog.md "v$VERSION" artifacts.zip
             fi
         
 
